# Trimui-8bit-Numera

./: .gitignore  CMakeLists.txt  LICENSE  README.md  launch.sh  main.cpp  pak.json  toolchain.cmake
.github/workflows/: build.yml
